--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="nav">
                 <div class="box">
                     <div class=" btn btn-secondary">
-                        <a href="home.html" target="">Home</a>
+                        <a href="./OG-Holdings-LLC/home.html" target="">Home</a>
                     </div>
                     <div class=" btn btn-secondary">
-                        <a href="partners.html" target="">Partners</a>
+                        <a href="./OG-Holdings-LLC/partners.html" target="">Partners</a>
                     </div>
                     <div class=" btn btn-secondary">
-                        <a href="contact.html" target="">Contact</a>
+                        <a href="./OG-Holdings-LLC/contact.html" target="">Contact</a>
                     </div>
 
                 </div>
