--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav">
                 <div class="box">
                     <div class=" btn btn-secondary">
-                        <a href="./OG-Holdings-LLC/index.html" target="">Home</a>
+                        <a href="./index.html" target="">Home</a>
                     </div>
                     <div class=" btn btn-secondary">
                         <a href="./OG-Holdings-LLC/partners.html" target="">Partners</a>
